--- a/branches/Sindicato/Sindicato.WebSite/Web.config
+++ b/branches/Sindicato/Sindicato.WebSite/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <!--<add name="SindicatoContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=192.168.43.52;PASSWORD=Sindicato;PERSIST SECURITY INFO=True;USER ID=SINDICATO_121&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="SindicatoContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost;PASSWORD=Sindicato;PERSIST SECURITY INFO=True;USER ID=SD_121&quot;" providerName="System.Data.EntityClient" />
+    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />
+    <add name="SindicatoContext" connectionString="metadata=res://*/Modelo.csdl|res://*/Modelo.ssdl|res://*/Modelo.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost;PASSWORD=Sindicato;PERSIST SECURITY INFO=True;USER ID=SD_121V1&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
@@ -16,7 +16,7 @@
   <system.web>
     <globalization uiCulture="es" culture="es-MX" />
     <httpHandlers>
-      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"
         validate="false" />
     </httpHandlers>
     <compilation debug="true" targetFramework="4.0">
